make solrj-env files

--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -2,7 +2,14 @@ FROM openjdk:22-slim
 
 WORKDIR /app
 
+RUN apt -y update && apt -y upgrade
+RUN apt -y install maven
+
 COPY . .
 
-RUN apt -y update && apt -y upgrade
-RUN apt -y install curl
+WORKDIR /app/java
+
+RUN mvn compile
+# RUN mvn package
+
+CMD ["mvn", "exec:java"]
