--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     build:
       context: .
       dockerfile: ./java/Dockerfile
-    volumes:
-      - ./java:/app
+    # volumes:
+    #   - ./java:/app
     container_name: java
     tty: true
     depends_on:
