--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,7 +23,8 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <mainClass>Sample</mainClass>
+                    <mainClass>EmbedSearch</mainClass>
+                    <!-- <mainClass>Sample</mainClass> -->
                 </configuration>
             </plugin>
         </plugins>
